--- a/client/index.html
+++ b/client/index.html
@@ -69,6 +69,7 @@
     <script src="app/account/profile/profile.directive.js"></script>
     <script src="app/account/profile/profile.service.js"></script>
     <script src="app/course/course.controller.js"></script>
+    <script src="app/course/course.directive.js"></script>
     <script src="app/course/course.js"></script>
     <script src="app/course/course.service.js"></script>
     <script src="app/job/job.controller.js"></script>
