--- a/client/app/account/profile/tabs.template.html
+++ b/client/app/account/profile/tabs.template.html
@@ -16,11 +16,12 @@
   <ng-switch on="selectedTabIndex" class="tabpanel-container" flex>
     <div role="tabpanel" id="course-tab-content" aria-labelledby="course-tab"
 	 ng-switch-when="1" md-swife-left="next()" md-swife-right="previous()">
-      <rebot-profile-course-tab />
+      <rebot-profile-course-tab></rebot-profile-course-tab>
     </div>
     <div role="tabpanel" id="github-tab-content" aria-labelledby="github-tab"
 	 ng-switch-when="0" md-swife-left="next()" md-swife-right="previous()" flex>
-      <rebot-profile-github-tab />
+      <rebot-profile-github-tab></rebot-profile-github-tab>
+      </div>
     </div>
   </ng-switch>
 </md-content>
